# Chromebook_Touchpad_Auto_Control

./: CMakeLists.txt  README.md  main.cpp
